TheHillsShootout.css
body {
    background-image: url("img/TheHills.jpg");
    background-size: 100%;
    background-repeat: no-repeat;
   }

* {
    cursor: crosshair;
 }

.enemySoldier {
    background-color: transparent;
    position: absolute;
    top: 200px;
    left: 200px; 
}

#playImage {
    background-color: transparent;
    position: absolute;
}

#playDiv, #playAnchor {
    width: 90%;
    text-align: center;
    margin-right: 10%;
}

h2 {
    color:red;
    font-size: 100px;
    text-align: center;
}

h1 {
    margin-top: 5px;
    color: gold;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 100px;
    text-align: center;
    font-weight: bolder;
}

body {
    user-select: none; 
}

